V5.2: (09 Aug 2013)
- OnMouseEnter and OnMouseLeave events have been added (#238)
- Improved dpi scaling for VirtualTreeView and Header
- toAutoChangeScale and toAutoSort are now among the defualt values for TCustomVirtualTreeOptions.AutoOptions
- Fixed issue #237: Auto focus the first node on enter if there is no focused node
- Fixed issue #344: Cannot select row by Ctrl+Click on empty column
- Fixed issue #206: Column painting issue with coWrapCaption in Options
- Fixed issue #128: OleUninitialize in FinalizeGlobalStructures can hang when using Virtual Treeview in a DLL
- Added new public property LastDragEffect which supplies the last executed drag effect.
- Added virtual method GetNodeImageSize() which can be overridden if one needs different sized images.
- Added new public property LastDragEffect which supplies the last executed drag effect.
- A few minor improvements have been added.
V5.1.3: (17 Apr 2013)
- Fixed #340: GetHitTestInfoAt on right border of fixed column.
- Fixed #337: Cannot "grab" item for dragging, odd behaviour of multi selecting with the selection
  rectangle when toFullRowSelect is True but toSimpleDrawSelection is False.  (thx to Stefan Glienke)
  rectangle when toFullRowSelect is True but toSimpleDrawSelection is False.  (thx to Stefan Glienke)
- Improved fix for #323: The fix applied in V5.1.2 was a breaking change for some projects, especially
  if not all the initialization was done in the OnInitNode event (reported as #338). vsInitialUserData
  has been renamed to vsOnFreeNodeCallRequired and is now set when GetNodeData is called. This fixes
  the possible memory leak reported in #323 and has better backward compatibility. 
- Fixed #316: These fixes are to make the treeview behave more like the windows explorer regarding
  selecting and dragging. Thanks to Stefan Glienke.
- Compatibility with / packages for Delphi Xe$ / RAD Studio XE4 have been added.